--- a/style.css
+++ b/style.css
@@ -33,14 +33,10 @@ button:hover {
 
 /* Map container */
 #map {
-    height: 70vh;
+    height: 70vh;  /* Must not be 0px */
     width: 90vw;
     border: 1px solid #333;
-    border-radius: 8px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.7);
-    margin-top: 10px;
 }
-
 /* Alcohol meter box */
 #alcohol-meter {
     background-color: #222;
